refactor(wording): home page

--- a/_includes/feature-funds.html
+++ b/_includes/feature-funds.html
@@ -15,7 +15,7 @@
                     <i class="fa fa-4x fa-code wow bounceIn text-primary"></i>
                     <h3>Améliorer le code</h3>
                     <p class="text-muted">
-                        Si vous avez des bases ou une expertise dans un domaine informatique. Nous serions très heureu de vous acceuillir parmi nos collaborateurs. On attends vos <a target="_blank" href="https://github.com/food-limit">pull requests</a> !
+                        Si vous avez des bases ou une expertise dans un domaine informatique. Nous serions très heureux de vous acceuillir parmi nos collaborateurs. On attends vos <a target="_blank" href="https://github.com/food-limit">pull requests</a> !
                 </div>
             </div>
             <div class="col-lg-4 col-md-6 text-center">
