feat(api-documentation): Init

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
                 <div class="header-content">
                     <div class="header-content-inner">
                         <h1>Terminé le gaspillage des denrées alimentaires grâce à Food Limit ! ✋🏻🍗🍌</h1>
-                        <a href="#download" class="btn btn-outline btn-xl page-scroll">L'aventure commence prochainement !</a>
+                        <a href="#features" class="btn btn-outline btn-xl page-scroll">Dites-moi en plus !</a>
                     </div>
                 </div>
             </div>
