--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -24,6 +24,9 @@
                 <li>
                     <a class="page-scroll" href="#contact">Contact</a>
                 </li>
+                <li>
+                    <a class="page-scroll" href="/api-documentation">API Documentation</a>
+                </li>
                 <!--<li>
                     <a href="/blog/">Blog</a>
                 </li>-->
